--- a/app/src/main/res/layout/activity_request.xml
+++ b/app/src/main/res/layout/activity_request.xml
@@ -55,7 +55,7 @@
         app:layout_constraintVertical_bias="0.647" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/requestForRide"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Request Driver"
@@ -67,7 +67,7 @@
         app:layout_constraintVertical_bias="0.774" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/requestCancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cancel"
@@ -91,7 +91,7 @@
         app:layout_constraintVertical_bias="0.86" />
 
     <EditText
-        android:id="@+id/editTextTextPostalAddress"
+        android:id="@+id/requestedPostalAddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -105,7 +105,7 @@
         app:layout_constraintVertical_bias="0.416" />
 
     <EditText
-        android:id="@+id/editTextTime"
+        android:id="@+id/requestedTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -119,7 +119,7 @@
         app:layout_constraintVertical_bias="0.527" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName2"
+        android:id="@+id/requestExtraInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
