--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".activities.MainActivity">
 
 
 
@@ -21,7 +21,7 @@
         app:layout_constraintVertical_bias="0.119" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/rider"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Request a Driver"
@@ -33,7 +33,7 @@
         app:layout_constraintVertical_bias="0.338" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/driver"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Become a Driver"
@@ -45,7 +45,7 @@
         app:layout_constraintVertical_bias="0.499" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/reportProblem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Report a Problem"
