--- a/app/src/main/res/layout/activity_map_rider.xml
+++ b/app/src/main/res/layout/activity_map_rider.xml
@@ -6,16 +6,38 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.MapRiderActivity">
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/logout"
-        android:text="Logout"/>
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/logout"
+        android:text="Logout"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/setting"
+            android:text="Setting"
+            android:gravity="right"/>
+        <androidx.cardview.widget.CardView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_margin="20sp"
+       android:layout_below="@+id/logout">
+       <fragment
+           android:id="@+id/autocomplete_fragment"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment" />
+    </androidx.cardview.widget.CardView>
+    </RelativeLayout>
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
