--- a/app/src/main/res/layout/activity_map_rider.xml
+++ b/app/src/main/res/layout/activity_map_rider.xml
@@ -19,14 +19,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/logout"
         android:text="Logout"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/setting"
-            android:text="Setting"
-            android:gravity="right"/>
         <androidx.cardview.widget.CardView
-       android:layout_width="wrap_content"
+       android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:layout_below="@+id/logout">
