--- a/app/src/main/res/layout/activity_map_driver.xml
+++ b/app/src/main/res/layout/activity_map_driver.xml
@@ -50,9 +50,15 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/userLocation"
+                android:id="@+id/userDestination"
                 android:paddingBottom="10sp"
                 android:paddingTop="20sp"/>
+
+            <Button
+                android:id="@+id/rideStatus"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Pick-up Customer?" />
         </LinearLayout>
     </LinearLayout>
 </FrameLayout>
